force-app/main/default/objects/FunctionSettings__c/FunctionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Lightning Function Settings</label>
</CustomObject>