force-app/main/default/objects/FunctionSettings__c/fields/GitHubApiKey__c.field-meta.xml
<CustomField>
    <fullName>GitHubApiKey__c</fullName>
    <description
  >GitHub API Key having access to Function Runtime repo.</description>
    <label>GitHubApiKey</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>