force-app/main/default/objects/FunctionSettings__c/fields/HerokuApiKey__c.field-meta.xml
<CustomField>
    <fullName>HerokuApiKey__c</fullName>
    <description
  >Heroku API key.  See https://devcenter.heroku.com/articles/platform-api-quickstart#authentication.</description>
    <inlineHelpText
  >https://devcenter.heroku.com/articles/platform-api-quickstart#authentication</inlineHelpText>
    <label>HerokuApiKey</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>