force-app/main/default/objects/FunctionSettings__c/fields/HerokuTeamName__c.field-meta.xml
<CustomField>
    <fullName>HerokuTeamName__c</fullName>
    <description
  >Heroku Team Name.  See https://devcenter.heroku.com/articles/platform-api-reference#team-app-create.</description>
    <inlineHelpText
  >https://devcenter.heroku.com/articles/platform-api-reference#team-app-create</inlineHelpText>
    <label>HerokuTeamName</label>
    <length>75</length>
    <type>Text</type>
</CustomField>