force-app/main/default/objects/FunctionSettings__c/fields/Mulesoft_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Organization_Id__c</fullName>
    <description
  >The Organization Id obtained as described here https://support.mulesoft.com/s/article/How-to-know-my-Organization-ID-Org-ID-on-the-Anypoint-Platform</description>
    <label>Mulesoft Organization Id</label>
    <length>75</length>
    <type>Text</type>
</CustomField>