force-app/main/default/objects/FunctionSettings__c/fields/Mulesoft_Username__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Username__c</fullName>
    <description
  >The username used to log into the Anypoint Exchange</description>
    <inlineHelpText
  >https://anypoint.mulesoft.com/exchange/portals/anypoint-platform/f1e97bc6-315a-4490-82a7-23abe036327a.anypoint-platform/access-management-api</inlineHelpText>
    <label>Mulesoft Username</label>
    <length>75</length>
    <type>Text</type>
</CustomField>